2002-03-24  Ian MacPhedran <Ian_MacPhedran@engr.USask.Ca>

	* output-fig.c (out_fig_splines): Added a new 
	local variable, fig_spline_close.

2002-03-20  Martin Weber <martweb@gmx.net>

	* output-emf.c (GetEmfStats, GetEmfStats): 
	Number of records was not counted correctly.

	Message-ID: <15225.1016698302@www11.gmx.net>.

2002-03-21  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (libautotrace_a_SOURCES): Added
	strgicmp.c. This function must be in libautotrace.a
	because input.c uses.

2002-03-20  Martin Weber <martweb@gmx.net>

	* README updated.
	
	* TODO: New file.

2002-03-20  Martin Weber <martweb@gmx.net>

	* output-emf.c: Don't include output.h.

	Message-ID: <24692.1016622657@www46.gmx.net>.
	
2002-03-20  Masatake YAMATO  <yamato@redhat.com>

	* NEWS: Updated.
	
	* configure.in: Create a pre release(0.30pre1).
	
2002-03-20  Martin Weber <martweb@gmx.net>

	* output-emf.c: Include output.h.
	Fixed bug when boundaries of the splines were larger than the
	boundaries of the bitmap.
	* output-cgm.c: removed FLOAT_TO_UI16.
	
	Message-ID: <3C97B972.12D92E49@gmx.net>.

2002-03-20  Masatake YAMATO  <yamato@redhat.com>

	* NEWS: Updated for 0.30.

	* autotrace.h: Added comments for at_splines_new.

2002-03-20  Martin Weber <martweb@gmx.net>

	* fit.c (fitted_splines::total): Removed.
	(*): Remove `_'(underscore) from variable 
	names to avoid conflicting with function
	name. Initialized local variables to 
	avoid compiler warnings.
	
	* thin-image.c: Put cast to avoid compiler
	warnings.
	
	* median.c (generate_histogram_rgb): Added
	default: to switch-case to avoid compiler
	warnings.
	(find_nearby_colors::min_dist): Initialized.
	
	* vector.c: Rename local var, exp->excep.

	* pxl-outline.c: Make functions static scope.

	* output-mif.c: Don'e include <time.h>.

	* output-fig.c (fig_col_init): Return nothing.
	(fig_col_hash): Put parentheses around 
	the macro arg.
	(out_fig_splines): Removed unused variable `i'.